mise en place de la structure html par rapport au decoupage de la maquette

--- a/site_production/index.html
+++ b/site_production/index.html
@@ -3,10 +3,17 @@
 <head>
   <meta charset="utf-8">
   <title>Oh My Food</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
   
+    <header>...</header>
+
+    <section><!-- Section correspondant au lien vers les restaurants --></section>
+    <section><!-- Section correspondant a plusieurs choix comme un restaurant, un menu, ou autre --></section>
+    <section><!-- Section correspondant aux differentes cartes des restaurants --></section>
+
+    <footer>...</footer>
 
 </body>
 </html>
