Mise en place du html pour le header

--- a/site_production/index.html
+++ b/site_production/index.html
@@ -4,10 +4,21 @@
   <meta charset="utf-8">
   <title>Oh My Food</title>
   <link rel="stylesheet" href="assets/css/styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&family=Shrikhand&display=swap" rel="stylesheet">
 </head>
 <body>
   
-    <header>...</header>
+    <header>
+        <div class="header__logo">
+            <img src="assets/images/logo/ohmyfood@2x.svg" alt="logo principal du site ohmyfood">
+        </div>
+        <div class="header__location">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path fill="#353535" d="M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 128a64 64 0 1 1 0 128 64 64 0 1 1 0-128z"/></svg>
+            <p>Paris, Belleville</p>
+        </div>
+    </header>
 
     <section><!-- Section correspondant au lien vers les restaurants --></section>
     <section><!-- Section correspondant a plusieurs choix comme un restaurant, un menu, ou autre --></section>
