Mise en place de la section reservation avec les div et class ainsi que le contenu html

--- a/site_production/index.html
+++ b/site_production/index.html
@@ -21,11 +21,23 @@
         </div>
     </header>
 
-    <section><!-- Section correspondant au lien vers les restaurants --></section>
+    <!--Premiere section-->
+    <section class="reservation">
+        <div class="reservation__title">
+            <h2>Réservez le menu qui vous convient</h2>
+        </div>
+        <div class="reservation__text">
+            <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
+        </div>
+        <div class="button">
+            <button>Explorer nos restaurants</button>
+        </div>
+    </section>
+    
     <section><!-- Section correspondant a plusieurs choix comme un restaurant, un menu, ou autre --></section>
     <section><!-- Section correspondant aux differentes cartes des restaurants --></section>
 
-    <footer>...</footer>
+    <footer><!--C'est le footer--></footer>
 
 </body>
 </html>
