phase 1 pour la section reservation: titre et text terminé, création du bouton en cours dans bouton.scss + correction emplacement de code.

--- a/site_production/index.html
+++ b/site_production/index.html
@@ -29,12 +29,13 @@
         <div class="reservation__text">
             <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
         </div>
-        <div class="button">
-            <button>Explorer nos restaurants</button>
+        <div class="reservation__button">
+            <a href="#" class="button">Commander...</a>
+            <!--<a href="#" class="button">Explorer nos restaurants</a>-->
         </div>
     </section>
     
-    <section><!-- Section correspondant a plusieurs choix comme un restaurant, un menu, ou autre --></section>
+    <section><!-- Section correspondant à plusieurs choix comme un restaurant, un menu, ou autre --></section>
     <section><!-- Section correspondant aux differentes cartes des restaurants --></section>
 
     <footer><!--C'est le footer--></footer>
