Finalisation de la section reservation, bouton terminé et correction de quelques petite lignes

--- a/site_production/index.html
+++ b/site_production/index.html
@@ -30,8 +30,7 @@
             <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
         </div>
         <div class="reservation__button">
-            <a href="#" class="button">Commander...</a>
-            <!--<a href="#" class="button">Explorer nos restaurants</a>-->
+            <a href="#" class="button"><p>Explorer nos restaurants</p></a>
         </div>
     </section>
     
