--- a/site_production/index.html
+++ b/site_production/index.html
@@ -33,8 +33,35 @@
             <a href="#" class="button"><p>Explorer nos restaurants</p></a>
         </div>
     </section>
-    
-    <section><!-- Section correspondant à plusieurs choix comme un restaurant, un menu, ou autre --></section>
+    <!--Deuxième section-->
+    <section class="explain">
+        <div class="explain__title">
+            <h2>Fonctionnement</h2>
+        </div>
+        <div class="explain__container">
+            <div class="circle__numbers">
+                <p>1</p>
+            </div>
+            <article class="explain__cards">
+                <svg xmlns="http://www.w3.org/2000/svg" height="20" width="13" viewBox="0 0 384 512"><path fill="#7E7E7E" d="M16 64C16 28.7 44.7 0 80 0H304c35.3 0 64 28.7 64 64V448c0 35.3-28.7 64-64 64H80c-35.3 0-64-28.7-64-64V64zM224 448a32 32 0 1 0 -64 0 32 32 0 1 0 64 0zM304 64H80V384H304V64z"/></svg>
+                <h3>Choisissez un restaurant</h3>
+            </article>
+            <div class="circle__numbers">
+                <p>2</p>
+            </div>
+            <article class="explain__cards">
+                <svg xmlns="http://www.w3.org/2000/svg" height="17" width="18" viewBox="0 0 512 512"><path fill="#7E7E7E" d="M64 144a48 48 0 1 0 0-96 48 48 0 1 0 0 96zM192 64c-17.7 0-32 14.3-32 32s14.3 32 32 32H480c17.7 0 32-14.3 32-32s-14.3-32-32-32H192zm0 160c-17.7 0-32 14.3-32 32s14.3 32 32 32H480c17.7 0 32-14.3 32-32s-14.3-32-32-32H192zm0 160c-17.7 0-32 14.3-32 32s14.3 32 32 32H480c17.7 0 32-14.3 32-32s-14.3-32-32-32H192zM64 464a48 48 0 1 0 0-96 48 48 0 1 0 0 96zm48-208a48 48 0 1 0 -96 0 48 48 0 1 0 96 0z"/></svg>
+                <h3>Choisissez un restaurant</h3>
+            </article>
+            <div class="circle__numbers">
+                <p>3</p>
+            </div>
+            <article class="explain__cards">
+                <svg xmlns="http://www.w3.org/2000/svg" height="18" width="18" viewBox="0 0 576 512"><path fill="#7E7E7E" d="M547.6 103.8L490.3 13.1C485.2 5 476.1 0 466.4 0H109.6C99.9 0 90.8 5 85.7 13.1L28.3 103.8c-29.6 46.8-3.4 111.9 51.9 119.4c4 .5 8.1 .8 12.1 .8c26.1 0 49.3-11.4 65.2-29c15.9 17.6 39.1 29 65.2 29c26.1 0 49.3-11.4 65.2-29c15.9 17.6 39.1 29 65.2 29c26.2 0 49.3-11.4 65.2-29c16 17.6 39.1 29 65.2 29c4.1 0 8.1-.3 12.1-.8c55.5-7.4 81.8-72.5 52.1-119.4zM499.7 254.9l-.1 0c-5.3 .7-10.7 1.1-16.2 1.1c-12.4 0-24.3-1.9-35.4-5.3V384H128V250.6c-11.2 3.5-23.2 5.4-35.6 5.4c-5.5 0-11-.4-16.3-1.1l-.1 0c-4.1-.6-8.1-1.3-12-2.3V384v64c0 35.3 28.7 64 64 64H448c35.3 0 64-28.7 64-64V384 252.6c-4 1-8 1.8-12.3 2.3z"/></svg>
+                <h3>Choisissez un restaurant</h3>
+            </article>
+        </div>
+    </section>
     <section><!-- Section correspondant aux differentes cartes des restaurants --></section>
 
     <footer><!--C'est le footer--></footer>
