phase 1 de la section restaurants mise en place de la structure + demarrage du html/css

--- a/site_production/index.html
+++ b/site_production/index.html
@@ -62,7 +62,33 @@
             </article>
         </div>
     </section>
-    <section><!-- Section correspondant aux differentes cartes des restaurants --></section>
+    <section class="restaurants">
+        <div class="restaurants__title">
+            <h2>Restaurants</h2>
+        </div>
+        <article class="restaurants__cards__1">
+            <img src="./assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Photo du restaurant Ménilmontant">
+            <div class="restaurant__cards__1__notif">
+                <p>Nouveau</p>
+            </div>
+            <div>
+                <div class="restaurants__cards__1__description">
+                    <h3>La palette du goût</h3>
+                    <p>Ménilmontant</p>
+                </div>
+                <div class="restaurants__cards__1__heart">...</div>
+            </div>
+        </article>
+        <article class="restaurants__cards__2">
+
+        </article>
+        <article class="restaurants__cards__3">
+
+        </article>
+        <article class="restaurant__cards__4">
+
+        </article>
+    </section>
 
     <footer><!--C'est le footer--></footer>
 
