Finalisation de la section explain et modification de la structure du code par rapport au circle numbers

--- a/site_production/index.html
+++ b/site_production/index.html
@@ -41,26 +41,28 @@
             <h2>Fonctionnement</h2>
         </div>
         <div class="explain__container">
-            <div class="circle__numbers">
-                <p>1</p>
-            </div>
             <article class="explain__cards">
+                <div class="circle__numbers">
+                    <p>1</p>
+                </div>
                 <i class="fa-solid fa-mobile-screen-button"></i>  
                 <h3>Choisissez un restaurant</h3>
             </article>
-            <div class="circle__numbers">
-                <p>2</p>
-            </div>
+            
             <article class="explain__cards">
+                <div class="circle__numbers">
+                    <p>2</p>
+                </div>
                 <i class="fa-solid fa-list-ul"></i>
-                <h3>Choisissez un restaurant</h3>
+                <h3>Composez votre menu</h3>
             </article>
-            <div class="circle__numbers">
-                <p>3</p>
-            </div>
+            
             <article class="explain__cards">
+                <div class="circle__numbers">
+                    <p>3</p>
+                </div>
                 <i class="fa-solid fa-store"></i>
-                <h3>Choisissez un restaurant</h3>
+                <h3>Dégustez au restaurant</h3>
             </article>
         </div>
     </section>
