finalisation de la partie restaurant a voir par rapport au doublage de code necessaire a cause de la notif "nouveau"

--- a/site_production/index.html
+++ b/site_production/index.html
@@ -72,8 +72,9 @@
             <h2>Restaurants</h2>
         </div>
         <div class="restaurants__container">
-            <article class="restaurants__cards">
-                <div class="restaurants__cards__notif">
+            <!--Carte 1-->
+            <article class="restaurants__cards__add">
+                <div class="restaurants__cards__add__notif">
                     <p>Nouveau</p>
                 </div>
                 <img src="./assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Photo du restaurant Ménilmontant">
@@ -87,8 +88,9 @@
                     </div>
                 </div>
             </article>
-            <article class="restaurants__cards">
-                <div class="restaurants__cards__notif">
+            <!--Carte 2-->
+            <article class="restaurants__cards__add">
+                <div class="restaurants__cards__add__notif">
                     <p>Nouveau</p>
                 </div>
                 <img src="./assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Photo du restaurant Ménilmontant">
@@ -102,10 +104,8 @@
                     </div>
                 </div>
             </article>
+            <!--Carte 3-->
             <article class="restaurants__cards">
-                <div class="restaurants__cards__notif">
-                    <p>Nouveau</p>
-                </div>
                 <img src="./assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Photo du restaurant Ménilmontant">
                 <div class="restaurants__cards__description">
                     <div class="restaurants__cards__description__text">
@@ -117,10 +117,8 @@
                     </div>
                 </div>
             </article>
+            <!--Carte 4-->
             <article class="restaurants__cards">
-                <div class="restaurants__cards__notif">
-                    <p>Nouveau</p>
-                </div>
                 <img src="./assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Photo du restaurant Ménilmontant">
                 <div class="restaurants__cards__description">
                     <div class="restaurants__cards__description__text">
