--- a/site_production/index.html
+++ b/site_production/index.html
@@ -133,7 +133,25 @@
         </div>
     </section>
 
-    <footer><!--C'est le footer--></footer>
+    <footer>
+        <div class="footer">
+            <img src="./assets/images/logo/ohmyfood@2x.svg">
+            <div class="footer__restaurant">
+                <i class="fa-solid fa-utensils"></i>
+                <p>Proposer un restaurant</p>
+            </div>
+            <div class="footer__partner">
+                <i class="fa-solid fa-handshake"></i>
+                <p>Devenir partenaire</p>
+            </div>
+            <div class="footer__mentions">
+                <p>Mentions légales</p>
+            </div>
+            <div class="footer__contact">
+                <p>Contact</p>
+            </div>
+        </div>
+    </footer>
 
 </body>
 </html>
