--- a/site_production/restaurants/page_menu_1.html
+++ b/site_production/restaurants/page_menu_1.html
@@ -29,15 +29,15 @@
         <img src="../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg">
     </div>
 
-    <section class="menu__container">
+    <section class="container">
         <div class="title">
             <h2>La palette du goût</h2>
             <div class="heart">
                 <i class="fa-regular fa-heart"></i>
             </div>
         </div>
-        <div class="enter">
-            <div class="enter__title">
+        <div class="menu">
+            <div class="menu__title">
                 <p>ENTRÉES</p>
             </div>
             <div class="green__bar">
@@ -49,24 +49,107 @@
                 </div>
                 <div class="menu__cards__txt__price">
                     <p>Au piment d'Espelette</p>
-                    <p>25€</p>
+                    <p class="bold">25€</p>
                 </div>
             </div>
             <!--Fin de la carte principal-->
+            <!--Carte 1.2-->
+            <div class="menu__cards">
+                <div class="menu__cards__title">
+                    <h3>Foie gras de canard mi-cuit</h3>
+                </div>
+                <div class="menu__cards__txt__price">
+                    <p>Et ses copeaux de truffe noire</p>
+                    <p class="bold">35€</p>
+                </div>
+            </div>
+            <!--Carte 1.3-->
+            <div class="menu__cards">
+                <div class="menu__cards__title">
+                    <h3>Œuf au plat</h3>
+                </div>
+                <div class="menu__cards__txt__price">
+                    <p>Assaisonné à la truffe sur lit de caviar</p>
+                    <p class="bold">20€</p>
+                </div>
+            </div>
         </div>
-        <div class="dishes">
-            <div class="dishes__title">
+        <div class="menu">
+            <div class="menu__title">
                 <p>PLATS</p>
             </div>
             <div class="green__bar">
             </div>
+            <!--Carte 2.1-->
+            <div class="menu__cards">
+                <div class="menu__cards__title">
+                    <h3>Filet de boeuf aux herbes</h3>
+                </div>
+                <div class="menu__cards__txt__price">
+                    <p>Accompagné de sa ribambelle de légumes</p>
+                    <p class="bold">40€</p>
+                </div>
+            </div>
+            <!--Carte 2.2-->
+            <div class="menu__cards">
+                <div class="menu__cards__title">
+                    <h3>Parmentier de queue de boeuf</h3>
+                </div>
+                <div class="menu__cards__txt__price">
+                    <p>À la truffe noire sur sa purée de panais</p>
+                    <p class="bold">35€</p>
+                </div>
+            </div>
+            <!--Carte 2.3-->
+            <div class="menu__cards">
+                <div class="menu__cards__title">
+                    <h3>Filet de turbot</h3>
+                </div>
+                <div class="menu__cards__txt__price">
+                    <p>Aux agrumes</p>
+                    <p class="bold">44€</p>
+                </div>
+            </div>
         </div>
-        <div class="desserts">
-            <div class="desserts__title">
+        <div class="menu">
+            <div class="menu__title">
                 <p>DESSERTS</p>
             </div>
             <div class="green__bar">
             </div>
+            <!--Carte 3.1-->
+            <div class="menu__cards">
+                <div class="menu__cards__title">
+                    <h3>Paris-Brest</h3>
+                </div>
+                <div class="menu__cards__txt__price">
+                    <p>Revisité</p>
+                    <p class="bold">18€</p>
+                </div>
+            </div>
+            <!--Carte 3.2-->
+            <div class="menu__cards">
+                <div class="menu__cards__title">
+                    <h3>Macaron au chocolat d'exception</h3>
+                </div>
+                <div class="menu__cards__txt__price">
+                    <p>Et glace à la vanille de Madagascar</p>
+                    <p class="bold">22€</p>
+                </div>
+            </div>
+            <!--Carte 3.3-->
+            <div class="menu__cards">
+                <div class="menu__cards__title">
+                    <h3>Mousse au chocolat</h3>
+                </div>
+                <div class="menu__cards__txt__price">
+                    <p>Au piment d'Espelette et à la truffe noire</p>
+                    <p class="bold">23€</p>
+                </div>
+            </div>
+        </div>
+        <div class="container__button">
+            <a href="#" class="button"><p>Commander</p></a>
         </div>
     </section>
 
