header corriger et fini a 100% correction du responsive. page 1 des menu fini a 100% !

--- a/site_production/restaurants/page_menu_1.html
+++ b/site_production/restaurants/page_menu_1.html
@@ -15,9 +15,11 @@
   
     <header>
         <div class="header__container">
+            <a href="../index.html">
             <div class="header__comeback">
                 <i class="fa-solid fa-arrow-left"></i>
             </div>
+            </a>
             <div class="header__logo">
                 <img src="../assets/images/logo/ohmyfood@2x.svg" alt="Logo du site ohmyfood">
 
