--- a/site_production/index.html
+++ b/site_production/index.html
@@ -14,8 +14,10 @@
 <body>
   
     <header>
-        <div class="header__logo">
-            <img src="assets/images/logo/ohmyfood@2x.svg" alt="logo principal du site ohmyfood">
+        <div class="logo__container">
+            <div class="header__logo">
+                <img src="assets/images/logo/ohmyfood@2x.svg" alt="logo principal du site ohmyfood">
+            </div>
         </div>
         <div class="header__location">
             <i class="fa-solid fa-location-dot"></i>
@@ -74,19 +76,21 @@
         <div class="restaurants__container">
             <!--Carte 1-->
             <article class="restaurants__cards__add">
-                <div class="restaurants__cards__add__notif">
-                    <p>Nouveau</p>
-                </div>
-                <img src="./assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Photo du restaurant Ménilmontant">
-                <div class="restaurants__cards__description">
-                    <div class="restaurants__cards__description__text">
-                        <h3>La palette du goût</h3>
-                        <p>Ménilmontant</p>
+                <a href="./restaurants/page_menu_1.html">
+                    <div class="restaurants__cards__add__notif">
+                        <p>Nouveau</p>
                     </div>
-                    <div class="restaurants__cards__description__heart">
-                        <i class="fa-regular fa-heart"></i>
+                    <img src="./assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Photo du restaurant Ménilmontant">
+                    <div class="restaurants__cards__description">
+                        <div class="restaurants__cards__description__text">
+                            <h3>La palette du goût</h3>
+                            <p>Ménilmontant</p>
+                        </div>
+                        <div class="restaurants__cards__description__heart">
+                            <i class="fa-regular fa-heart"></i>
+                        </div>
                     </div>
-                </div>
+                </a>
             </article>
             <!--Carte 2-->
             <article class="restaurants__cards__add">
