Mise en place de toutes les page des restaurants ainsi que de les relié au niveau de la page d'acccueil, également tout le html fait a 100%

--- a/site_production/index.html
+++ b/site_production/index.html
@@ -94,45 +94,51 @@
             </article>
             <!--Carte 2-->
             <article class="restaurants__cards__add">
-                <div class="restaurants__cards__add__notif">
-                    <p>Nouveau</p>
-                </div>
-                <img src="./assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Photo du restaurant Ménilmontant">
-                <div class="restaurants__cards__description">
-                    <div class="restaurants__cards__description__text">
-                        <h3>La note enchantée</h3>
-                        <p>Charonne</p>
+                <a href="./restaurants/page_menu_2.html">
+                    <div class="restaurants__cards__add__notif">
+                        <p>Nouveau</p>
                     </div>
-                    <div class="restaurants__cards__description__heart">
-                        <i class="fa-regular fa-heart"></i>
+                    <img src="./assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Photo du restaurant Ménilmontant">
+                    <div class="restaurants__cards__description">
+                        <div class="restaurants__cards__description__text">
+                            <h3>La note enchantée</h3>
+                            <p>Charonne</p>
+                        </div>
+                        <div class="restaurants__cards__description__heart">
+                            <i class="fa-regular fa-heart"></i>
+                        </div>
                     </div>
-                </div>
+                </a>
             </article>
             <!--Carte 3-->
             <article class="restaurants__cards">
-                <img src="./assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Photo du restaurant Ménilmontant">
-                <div class="restaurants__cards__description">
-                    <div class="restaurants__cards__description__text">
-                        <h3>À la française</h3>
-                        <p>Cité Rouge</p>
+                <a href="./restaurants/page_menu_3.html">
+                    <img src="./assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Photo du restaurant Ménilmontant">
+                    <div class="restaurants__cards__description">
+                        <div class="restaurants__cards__description__text">
+                            <h3>À la française</h3>
+                            <p>Cité Rouge</p>
+                        </div>
+                        <div class="restaurants__cards__description__heart">
+                            <i class="fa-regular fa-heart"></i>
+                        </div>
                     </div>
-                    <div class="restaurants__cards__description__heart">
-                        <i class="fa-regular fa-heart"></i>
-                    </div>
-                </div>
+                </a>
             </article>
             <!--Carte 4-->
             <article class="restaurants__cards">
-                <img src="./assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Photo du restaurant Ménilmontant">
-                <div class="restaurants__cards__description">
-                    <div class="restaurants__cards__description__text">
-                        <h3>Le délice des sens</h3>
-                        <p>Folie-Méricourt</p>
+                <a href="./restaurants/page_menu_4.html">
+                    <img src="./assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Photo du restaurant Ménilmontant">
+                    <div class="restaurants__cards__description">
+                        <div class="restaurants__cards__description__text">
+                            <h3>Le délice des sens</h3>
+                            <p>Folie-Méricourt</p>
+                        </div>
+                        <div class="restaurants__cards__description__heart">
+                            <i class="fa-regular fa-heart"></i>
+                        </div>
                     </div>
-                    <div class="restaurants__cards__description__heart">
-                        <i class="fa-regular fa-heart"></i>
-                    </div>
-                </div>
+                </a>
             </article>
         </div>
     </section>
