--- a/site_production/restaurants/page_menu_3.html
+++ b/site_production/restaurants/page_menu_3.html
@@ -28,12 +28,12 @@
     </header>
 
     <div class="images__menu">
-        <img src="../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Photo du restaurant la palette du goût">
+        <img src="../assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Photo du restaurant la note enchantée">
     </div>
 
     <section class="container">
         <div class="title">
-            <h2>La palette du goût</h2>
+            <h2>Le note enchantée</h2>
             <div class="heart">
                 <i class="fa-regular fa-heart"></i>
             </div>
@@ -47,10 +47,10 @@
             <!--Début de la carte principal-->
             <div class="menu__cards">
                 <div class="menu__cards__title">
-                    <h3>Fricassée d'escargots</h3>
+                    <h3>Ravioles de foie gras</h3>
                 </div>
                 <div class="menu__cards__txt__price">
-                    <p>Au piment d'Espelette</p>
+                    <p>Accompagnées de leur crème à la truffe</p>
                     <p class="bold">25€</p>
                 </div>
             </div>
@@ -58,21 +58,31 @@
             <!--Carte 1.2-->
             <div class="menu__cards">
                 <div class="menu__cards__title">
-                    <h3>Foie gras de canard mi-cuit</h3>
+                    <h3>Caviar osciètre</h3>
                 </div>
                 <div class="menu__cards__txt__price">
-                    <p>Et ses copeaux de truffe noire</p>
+                    <p>Sur blini à la farine de blé noir</p>
                     <p class="bold">35€</p>
                 </div>
             </div>
             <!--Carte 1.3-->
             <div class="menu__cards">
                 <div class="menu__cards__title">
-                    <h3>Œuf au plat</h3>
+                    <h3>Homard et espuma de potiron</h3>
                 </div>
                 <div class="menu__cards__txt__price">
-                    <p>Assaisonné à la truffe sur lit de caviar</p>
+                    <p>Marinées aux zestes d'orange</p>
                     <p class="bold">20€</p>
+                </div>
+            </div>
+            <!--Carte 1.4-->
+            <div class="menu__cards">
+                <div class="menu__cards__title">
+                    <h3>Foie gras de canard cuit entier</h3>
+                </div>
+                <div class="menu__cards__txt__price">
+                    <p>Confiture de figue et pain toasté</p>
+                    <p class="bold">35€</p>
                 </div>
             </div>
         </div>
@@ -85,31 +95,31 @@
             <!--Carte 2.1-->
             <div class="menu__cards">
                 <div class="menu__cards__title">
-                    <h3>Filet de boeuf aux herbes</h3>
+                    <h3>Noix de coquilles Saint-Jacques</h3>
                 </div>
                 <div class="menu__cards__txt__price">
-                    <p>Accompagné de sa ribambelle de légumes</p>
+                    <p>Sur lit de purée de céleri-rave</p>
                     <p class="bold">40€</p>
                 </div>
             </div>
             <!--Carte 2.2-->
             <div class="menu__cards">
                 <div class="menu__cards__title">
-                    <h3>Parmentier de queue de boeuf</h3>
+                    <h3>Langoustine poêlée</h3>
                 </div>
                 <div class="menu__cards__txt__price">
-                    <p>À la truffe noire sur sa purée de panais</p>
+                    <p>Purée de patate douce</p>
                     <p class="bold">35€</p>
                 </div>
             </div>
             <!--Carte 2.3-->
             <div class="menu__cards">
                 <div class="menu__cards__title">
-                    <h3>Filet de turbot</h3>
+                    <h3>Mijoté de queue de boeuf</h3>
                 </div>
                 <div class="menu__cards__txt__price">
-                    <p>Aux agrumes</p>
-                    <p class="bold">44€</p>
+                    <p>Et riz sauvage aux zestes de citron</p>
+                    <p class="bold">45€</p>
                 </div>
             </div>
         </div>
@@ -122,30 +132,30 @@
             <!--Carte 3.1-->
             <div class="menu__cards">
                 <div class="menu__cards__title">
-                    <h3>Paris-Brest</h3>
+                    <h3>Macaron noisette et chocolat</h3>
                 </div>
                 <div class="menu__cards__txt__price">
-                    <p>Revisité</p>
+                    <p>Glace au caramel brun et sel de Guérande</p>
                     <p class="bold">18€</p>
                 </div>
             </div>
             <!--Carte 3.2-->
             <div class="menu__cards">
                 <div class="menu__cards__title">
-                    <h3>Macaron au chocolat d'exception</h3>
+                    <h3>Baba au rhum revisité</h3>
                 </div>
                 <div class="menu__cards__txt__price">
-                    <p>Et glace à la vanille de Madagascar</p>
+                    <p>Avec son coulis de citron</p>
                     <p class="bold">22€</p>
                 </div>
             </div>
             <!--Carte 3.3-->
             <div class="menu__cards">
                 <div class="menu__cards__title">
-                    <h3>Mousse au chocolat</h3>
+                    <h3>Tarte au citron meringuée</h3>
                 </div>
                 <div class="menu__cards__txt__price">
-                    <p>Au piment d'Espelette et à la truffe noire</p>
+                    <p>Déstructurée</p>
                     <p class="bold">23€</p>
                 </div>
             </div>
