--- a/site_production/restaurants/page_menu_4.html
+++ b/site_production/restaurants/page_menu_4.html
@@ -28,12 +28,12 @@
     </header>
 
     <div class="images__menu">
-        <img src="../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Photo du restaurant la palette du goût">
+        <img src="../assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Photo du restaurant à la française">
     </div>
 
     <section class="container">
         <div class="title">
-            <h2>La palette du goût</h2>
+            <h2>À la française</h2>
             <div class="heart">
                 <i class="fa-regular fa-heart"></i>
             </div>
@@ -47,10 +47,10 @@
             <!--Début de la carte principal-->
             <div class="menu__cards">
                 <div class="menu__cards__title">
-                    <h3>Fricassée d'escargots</h3>
+                    <h3>Tartare de poulpe acidulé</h3>
                 </div>
                 <div class="menu__cards__txt__price">
-                    <p>Au piment d'Espelette</p>
+                    <p>Au restes d'orange</p>
                     <p class="bold">25€</p>
                 </div>
             </div>
@@ -58,20 +58,20 @@
             <!--Carte 1.2-->
             <div class="menu__cards">
                 <div class="menu__cards__title">
-                    <h3>Foie gras de canard mi-cuit</h3>
+                    <h3>Velouté de légumes d'antan</h3>
                 </div>
                 <div class="menu__cards__txt__price">
-                    <p>Et ses copeaux de truffe noire</p>
+                    <p>Carotte, panais, topinambour</p>
                     <p class="bold">35€</p>
                 </div>
             </div>
             <!--Carte 1.3-->
             <div class="menu__cards">
                 <div class="menu__cards__title">
-                    <h3>Œuf au plat</h3>
+                    <h3>Soupe à l'oignon</h3>
                 </div>
                 <div class="menu__cards__txt__price">
-                    <p>Assaisonné à la truffe sur lit de caviar</p>
+                    <p>Revisité</p>
                     <p class="bold">20€</p>
                 </div>
             </div>
@@ -85,30 +85,30 @@
             <!--Carte 2.1-->
             <div class="menu__cards">
                 <div class="menu__cards__title">
-                    <h3>Filet de boeuf aux herbes</h3>
+                    <h3>Coquilles Saint-Jacques</h3>
                 </div>
                 <div class="menu__cards__txt__price">
-                    <p>Accompagné de sa ribambelle de légumes</p>
+                    <p>Accompagnées d'une purée de panais</p>
                     <p class="bold">40€</p>
                 </div>
             </div>
             <!--Carte 2.2-->
             <div class="menu__cards">
                 <div class="menu__cards__title">
-                    <h3>Parmentier de queue de boeuf</h3>
+                    <h3>Magret de canard</h3>
                 </div>
                 <div class="menu__cards__txt__price">
-                    <p>À la truffe noire sur sa purée de panais</p>
+                    <p>Et parmentier de pommes de terre</p>
                     <p class="bold">35€</p>
                 </div>
             </div>
             <!--Carte 2.3-->
             <div class="menu__cards">
                 <div class="menu__cards__title">
-                    <h3>Filet de turbot</h3>
+                    <h3>Pigeonneau d'Ille-et-Vilaine</h3>
                 </div>
                 <div class="menu__cards__txt__price">
-                    <p>Aux agrumes</p>
+                    <p>Sur son lit de gnocchis aux légumes</p>
                     <p class="bold">44€</p>
                 </div>
             </div>
@@ -122,30 +122,30 @@
             <!--Carte 3.1-->
             <div class="menu__cards">
                 <div class="menu__cards__title">
-                    <h3>Paris-Brest</h3>
+                    <h3>Pétales de violettes glacés</h3>
                 </div>
                 <div class="menu__cards__txt__price">
-                    <p>Revisité</p>
+                    <p>Et sa purée de noisettes</p>
                     <p class="bold">18€</p>
                 </div>
             </div>
             <!--Carte 3.2-->
             <div class="menu__cards">
                 <div class="menu__cards__title">
-                    <h3>Macaron au chocolat d'exception</h3>
+                    <h3>Fondant au chocolat</h3>
                 </div>
                 <div class="menu__cards__txt__price">
-                    <p>Et glace à la vanille de Madagascar</p>
+                    <p>Revisité</p>
                     <p class="bold">22€</p>
                 </div>
             </div>
             <!--Carte 3.3-->
             <div class="menu__cards">
                 <div class="menu__cards__title">
-                    <h3>Mousse au chocolat</h3>
+                    <h3>Millefeuille croustillant</h3>
                 </div>
                 <div class="menu__cards__txt__price">
-                    <p>Au piment d'Espelette et à la truffe noire</p>
+                    <p>Myrtilles et pâte d'amande</p>
                     <p class="bold">23€</p>
                 </div>
             </div>
