--- a/site_production/index.html
+++ b/site_production/index.html
@@ -12,7 +12,9 @@
 </head>
 
 <body>
-  
+    <div class="loader">
+        <div class="loader__img"></div>
+    
     <header>
         <div class="logo__container">
             <div class="header__logo">
@@ -162,6 +164,6 @@
             </div>
         </div>
     </footer>
-
+    </div>
 </body>
 </html>
