Mise en place de la premiere animation loader il ne manque plus cas la regler

--- a/site_production/index.html
+++ b/site_production/index.html
@@ -13,7 +13,9 @@
 
 <body>
     <div class="loader">
-        <div class="loader__img"></div>
+        <div class="loader__img">
+            <img src="./assets/images/logo/logo_loader.svg" alt="Logo s'une main d'un serveur qui porte un plat sous cloche">
+        </div>
     </div>
     <header>
         <div class="logo__container">
